# rvo_test

./: CMakeLists.txt  tensor.hpp  test.cpp
